# hackatics

./: README.MD  index.html  mi_llave_prueba.pem  package-lock.json  package.json
backend/: generate_keys.py  main.py  pyproject.toml  registeruser.py  users_db.json
my-project/: package-lock.json  package.json
my-project/src/: App.tsx
my-project/src/components/: SignatureModal.tsx
src/: App.tsx
src/components/admin/: AdminDashboard.tsx  ExpedientesManager.tsx  FormatosManager.tsx  PeriodsManager.tsx  ReportsSection.tsx  StudentsManager.tsx
src/components/auth/: LoginForm.tsx  RegisterForm.tsx
src/components/reviewer/: ExpedienteCard.tsx  ExpedienteDetailModal.tsx  PdfViewerModal.tsx  ReviewerDashboard.tsx
src/components/shared/: NotificationBell.tsx
src/components/student/: DocumentUploadModal.tsx  PdfSignerInterface.tsx  StudentDashboard.tsx
src/contexts/: AuthContext.tsx
src/lib/: database.types.ts
supabase/migrations/: 20251125175424_create_servicio_social_schema.sql  20251126000000_create_profile_on_signup.sql  20251128120000_add_formatos_bucket.sql
