[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.122.0",
    "pillow>=12.0.0",
    "pypdf>=6.4.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.5",
    "uvicorn>=0.38.0",
]
